--- a/config/site/bootstrap.settings.yml
+++ b/config/site/bootstrap.settings.yml
@@ -1,8 +1,9 @@
 favicon:
   mimetype: image/vnd.microsoft.icon
   path: ''
-  url: ''
+  url: 'http://amy-work.dd:8085/themes/bootstrap/favicon.ico'
   use_default: true
+schema: '8000'
 features:
   comment_user_picture: true
   comment_user_verification: true
@@ -12,4 +13,4 @@ logo:
   path: ''
   url: ''
   use_default: true
-schema: 8000
+cdn_jsdelivr_theme: superhero
